--- a/src/index.css
+++ b/src/index.css
@@ -26,3 +26,10 @@ body
   border: 1px solid #7b7b7d65;
   display: flex;
 }
+
+.loading{
+  padding: 50px;
+  font-size: 36px;
+  border-radius: 10px;
+  background-color: rgba(17, 25, 40, 0.9);
+}
